add Action Mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,19 @@
     </string-array>
     <string name="main_title">Учёт бюджета</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Action Mode -->
+    <string name="menu_item_del">Удалить</string>
+    <string name="item_del_dialog_msg">Вы точно хотите удалить выбранные элементы?</string>
+    <string name="item_del_dialog_yes">Да</string>
+    <string name="item_del_dialog_no">Нет</string>
+    <string name="action_mode_title">Выделено:\u0020</string>
 
+    <!-- Auth Screen -->
+    <string name="btn_google_title">Войти</string>
+    <string name="tv_version_title">Версия\u0020</string>
+    <string name="tv_version_year">2018</string>
+
+
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
