--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="auth_token">auth_token</string>
 </resources>
